--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -10,27 +10,25 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="1244dp"
-        android:layout_height="681dp"
+        android:layout_height="900dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.865"
+        app:layout_constraintHorizontal_bias="0.704"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.855"
-        app:srcCompat="@drawable/komorebi2" />
+        app:layout_constraintVertical_bias="0.856"
+        app:srcCompat="@drawable/title_haikei" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="248dp"
         android:layout_height="255dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
-        app:layout_constraintHorizontal_bias="0.41"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="96dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/itarusukun" />
@@ -41,12 +39,11 @@
         android:layout_height="112dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:background="@drawable/itusared"
         app:layout_constraintEnd_toStartOf="@+id/button_map"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        tools:layout_editor_absoluteY="354dp" />
 
     <Button
         android:id="@+id/button_map"
@@ -54,12 +51,9 @@
         android:layout_height="110dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/s1usablue"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/button_paint"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.993" />
+        app:layout_constraintEnd_toStartOf="@+id/button_paint" />
 
     <Button
         android:id="@+id/button_paint"
@@ -67,12 +61,9 @@
         android:layout_height="110dp"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/wusakiiro"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/button_arsinfo"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toStartOf="@+id/button_arsinfo" />
 
     <Button
         android:id="@+id/button_arsinfo"
@@ -84,49 +75,21 @@
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="457dp"
-        android:layout_height="185dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.345"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/title" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="298dp"
-        android:layout_height="115dp"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="68dp"
-        android:text="ようこそARSへ!!"
-        android:textColor="@color/colorPrimary"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="224dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="QR読み取り"
-        android:textColor="@android:color/background_light"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_orange_dark"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_qr" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -136,8 +99,8 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="学内マップ"
-        android:textColor="@android:color/background_light"
-        android:textSize="30sp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView4" />
@@ -150,8 +113,8 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="お絵描きApp"
-        android:textColor="@android:color/background_light"
-        android:textSize="30sp"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5" />
@@ -164,76 +127,63 @@
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="アルス情報"
-        android:textColor="@android:color/background_light"
-        android:textSize="30sp"
+        android:textColor="@android:color/holo_green_light"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button_web"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="39dp"
+        android:layout_height="358dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="皆が描いた問題 専用webフォーム"
-        app:layout_constraintBottom_toTopOf="@+id/button_arsinfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.361"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/test"
-        app:layout_constraintVertical_bias="0.793" />
-
-    <Button
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        android:text="問題１移動"
-        app:layout_constraintEnd_toStartOf="@+id/test3"
+        android:background="@drawable/ng_image_button"
+        android:text="お絵描き公開一覧↑タップ"
+        android:textSize="23sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView47"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/test2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="4dp"
-        android:text="問題２移動"
-        app:layout_constraintEnd_toStartOf="@+id/test4"
-        app:layout_constraintTop_toBottomOf="@+id/test" />
+    <ImageView
+        android:id="@+id/imageView46"
+        android:layout_width="397dp"
+        android:layout_height="263dp"
+        android:layout_marginStart="180dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fukidasi" />
 
-    <Button
-        android:id="@+id/test3"
+    <TextView
+        android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginTop="16dp"
-        android:text="問題３移動"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="272dp"
+        android:text="ようこそ"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/test4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginTop="8dp"
-        android:text="問題４移動"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test3" />
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="265dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="256dp"
+        android:layout_marginTop="80dp"
+        android:text="アルスへ!!"
+        android:textColor="@android:color/holo_green_light"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/test5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginTop="8dp"
-        android:text="問題５移動"
+    <ImageView
+        android:id="@+id/imageView47"
+        android:layout_width="235dp"
+        android:layout_height="344dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/paint_image" />
 
 </android.support.constraint.ConstraintLayout>
